finished room generation maze